--- a/views/mails/welcomeNewUser.hbs
+++ b/views/mails/welcomeNewUser.hbs
@@ -2,8 +2,8 @@
 <html>
 <head>
     <meta html-equiv="Content-Type" content="text/html" charset="UTF-8">
-    <title>Platforma</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <title>Sfera</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <style type="text/css">
         html, body {
             height: 100%;
@@ -18,21 +18,17 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-image: url('cid:background.jpg');
-            background-repeat: no-repeat;
-            background-size: cover;
             z-index: 0;
         }
 
         table {
-            font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, Ubuntu, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+            font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, Ubuntu, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
             position: relative;
             max-width: 600px;
             height: 100%;
             width: 100%;
             margin: 0 auto;
-            background: #000000;
-            opacity: 0.9;
+            background: #F5F5F5;
             z-index: 1;
         }
 
@@ -45,7 +41,7 @@
             font-size: 1.2rem;
             width: 90%;
             margin: 0 auto;
-            color: #A6A6A6;
+            color: #4E4E4E;
             z-index: 2;
         }
 
@@ -57,15 +53,14 @@
         .email-header {
             height: 50px;
             position: relative;
-            padding-bottom: 10px;
             z-index: 2;
         }
 
         img {
             display: block;
-            width: 160px;
-            height: 28px;
-            margin: 0 auto;
+            width: 110px;
+            height: 60px;
+            margin: 6px auto;
         }
 
         .email-line {
@@ -78,7 +73,7 @@
             position: relative;
             width: 90%;
             margin: 0 auto;
-            background-color: #B0A187;
+            background-color: #6597E2;
             border-radius: 4px;
             height: 3px;
             z-index: 2;
@@ -106,6 +101,7 @@
         .email-footer p {
             text-align: center;
             font-size: 0.7rem;
+            color: #6597E2;
         }
     </style>
 </head>
@@ -118,7 +114,7 @@
                 <tbody>
                 <tr>
                     <td class="email-header">
-                        <img src="cid:logo.png" alt="Platforma" border="0" width="160" height="28">
+                        <img src="cid:logo.png" alt="Sfera" border="0" width="110" height="60">
                     </td>
                 </tr>
                 <tr>
@@ -142,7 +138,7 @@
                 </tr>
                 <tr>
                     <td class="email-footer">
-                        <p>© {{year}} PLATFORMA</p>
+                        <p>© {{year}} SFERA</p>
                     </td>
                 </tr>
                 </tbody>
