--- a/views/chrome.hbs
+++ b/views/chrome.hbs
@@ -3,16 +3,16 @@
 <head>
     <meta charset="utf-8" />
 
-    <meta property="og:title" content="ПЛАТФОРМА." />
-    <meta property="og:description" content="Система контроля процесса строительства." />
-    <meta property="og:image" content="https://platforma.tech/promo/assets/iconWithText.jpg" />
-    <meta property="og:image:secure_url" content="https://platforma.tech/promo/assets/iconWithText.jpg" />
+    <meta property="og:title" content=" СФЕРА. " />
+    <meta property="og:description" content="360 и аэросъёмка." />
+    <meta property="og:image" content="https://sfera.com.ru/public/assets/sphere_logo_2.png" />
+    <meta property="og:image:secure_url" content="https://sfera.com.ru/public/assets/sphere_logo_2.png" />
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="100" />
     <meta property="og:image:height" content="100" />
     <meta property="og:type" content="video.movie" />
-    <meta property="og:site_name" content="platforma.tech" />
-    <meta property="og:url" content="https://www.platforma.tech" />
+    <meta property="og:site_name" content="sfera.com.ru" />
+    <meta property="og:url" content="https://sfera.com.ru" />
 
     <title>ПЛАТФОРМА</title>
     <style>
